--- a/.htaccess
+++ b/.htaccess
@@ -3,5 +3,6 @@ RewriteRule ^\.htaccess$ - [F]
 
 RewriteRule ^(releases/latest)$ pool.php?url=$1 [QSA,L]
 RewriteRule ^(contents/version/versionen.yml)$ pool.php?url=$1 [QSA,L]
+RewriteRule ^(contents/wiki.yml)$ pool.php?url=$1 [QSA,L]
 
 RewriteRule ^(tarball/(?:[0-9]+)(?:\.[0-9]+)*)$ pool.php?url=$1 [QSA,L]
